--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@swc/helpers": "^0.5.5",
     "autoprefixer": "^10.4.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
