--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web platform for Ikoha Community in Ovia South-West, Edo State, Nigeria",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@swc/helpers": "^0.5.5",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.0",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "postcss": "^8.4.0",
@@ -22,11 +25,12 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^16.1.3",
+    "eslint-config-next": "^14.2.0",
     "typescript": "^5.3.0"
   },
   "engines": {
