--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@swc/helpers": "^0.5.5",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.0",
-    "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "postcss": "^8.4.0",
     "react": "^18.3.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^18.3.0",
     "tailwindcss": "^3.4.0"
   },
