--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment files
+# Environment files (never commit API keys)
 .env
+.env.local
+.env*.local
 
 # Build folders
 .next/
